tests/analyzer/invalid/0012_code_quality_issues.tj
def emptyFunction() -> int {
}

def calculateWithMagicNumbers(x: int) -> int {
    return x * 42 + 100 - 7
}

def veryLongFunction(a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int) -> int {
    if (a > 0) {
        if (b > 0) {
            if (c > 0) {
                if (d > 0) {
                    if (e > 0) {
                        if (f > 0) {
                            if (g > 0) {
                                if (h > 0) {
                                    return a + b + c + d + e + f + g + h
                                }
                            }
                        }
                    }
                }
            }
        }
    }
    return 0
}

def BadFunctionName(param_with_underscores: int) -> int {
    return param_with_underscores * 2
}

def manyParameters(first: int, second: int, third: int, fourth: int, fifth: int, sixth: int, seventh: int, eighth: int) -> int {
    return first + second + third + fourth + fifth + sixth + seventh + eighth
}
